# server/docs/swagger.json
@@ -3229,6 +3229,55 @@
                 }
             }
         },
+        "/infra/interfaces/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update device interface",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Infra.Interface"
+                ],
+                "summary": "Update device interface",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "uuid formatted interfaceId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schemas.DeviceInterfaceUpdate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.IdResponse"
+                        }
+                    }
+                },
+                "X-func": {
+                    "name": "UpdateDeviceInterface"
+                }
+            }
+        },
         "/infra/racks": {
             "get": {
                 "security": [
@@ -7450,6 +7499,17 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                },
+                "uplink": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "schemas.DeviceInterfaceUpdate": {
+            "type": "object",
+            "properties": {
+                "uplink": {
+                    "type": "boolean"
                 }
             }
         },
